<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="35dp"
    android:gravity="center"
    android:background="@drawable/recyclo_register_image"
    android:layout_height="match_parent"
    tools:context=".Register">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.cardview.widget.CardView>

    <TextView
        android:text="@string/register"
        android:textColor="@color/white"

        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        style="@style/MyEditTextStyle">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"

            android:hint="@string/email"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/MyEditTextStyle">>
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"

            android:hint="@string/username"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_gravity="left"
        android:textColor="@color/red"
        android:text="@string/password_must_be_atleast_6_letters"/>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/MyEditTextStyle"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/grayLock"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:startIconTint="@color/black"
        >

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/MyEditTextStyle"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/grayLock"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:startIconTint="@color/black">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordRetype"
            android:hint="@string/passwordRetype"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_register"
        android:text="REGISTER"
        android:height="60dp"
        android:textSize="23dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/green"
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Already have an account? Login  now "
        android:textSize="16dp"
        android:textColor="@color/black"
        android:id="@+id/loginNow"
        android:layout_marginTop="10dp"/>


</LinearLayout>