<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    android:gravity="center"
    android:background="@drawable/recyclo_login_image"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/login"
        android:textColor="@color/green"
        android:textSize="35sp"
        android:textStyle="bold" />
   <com.google.android.material.textfield.TextInputLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="10dp"
       app:hintTextColor="@color/green"
       app:counterMaxLength="20"
       style="@style/MyEditTextStyle"
       >

       <com.google.android.material.textfield.TextInputEditText
           android:id="@+id/email"

           android:layout_width="224dp"
           android:layout_height="wrap_content"
           android:drawableLeft="@drawable/baseline_person_24"
           android:drawablePadding="8dp"
           android:hint="@string/email"
           android:textColor="@color/black" />
   </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        style="@style/MyEditTextStyle"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/grayLock"
        app:startIconDrawable="@drawable/baseline_lock_24"
        app:startIconTint="@color/black"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="179dp"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginTop="30dp"
        android:height="60dp"
        android:backgroundTint="@color/green"
        android:text="LOGIN"
        android:textColor="@color/white"
        android:textSize="23dp" />

    <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="Not yet registered? Sign up now "
       android:textSize="16dp"
       android:id="@+id/registerNow"
       android:textColor="@color/black"
       android:layout_marginTop="30dp"/>


</LinearLayout>