<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".UserMainActivity"
    android:background="@android:color/white"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_account_circle_24"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"/>

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/user_icon"
            android:layout_centerVertical="true"
            android:textSize="20sp"
            android:textColor="@color/green"
            android:layout_marginStart="10dp"

            />

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="147dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:backgroundTint="@color/green"
            android:drawableLeft="@drawable/baseline_logout_24"

            android:text="Logout" />
    </RelativeLayout>

    <!-- Rest of the page -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/home"
            android:textColor="@color/black"
            android:textSize="32sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/my_points"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/points_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/points_info"
                android:textColor="#838383"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/token_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginRight="20dp"
                android:src="@drawable/baseline_token_54" />

            <TextView
                android:id="@+id/tokens"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/token_icon"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"

                android:layout_marginTop="-1dp"

                android:layout_marginEnd="8dp"

                android:textColor="@color/purple"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/points_info">

                <TextView
                    android:id="@+id/points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:textColor="@color/gold"
                    android:textSize="27dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/points"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@+id/points"
                    android:text="@string/points"
                    android:textColor="@color/gold"
                    android:textSize="18dp" />

            </RelativeLayout>


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="220dp"
                android:layout_height="10dp"
                android:layout_marginTop="10dp"
                android:indeterminate="false"
                android:max="100"
                android:progress="0"
                android:progressDrawable="@drawable/custom_progressbar" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/progress"
                android:src="@drawable/baseline_token_24"

                />


        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_border"
            android:padding="18dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30sp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                tools:layout_editor_absoluteX="18dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/streak"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_border"
                    android:backgroundTint="#FFBFBC"
                    android:orientation="vertical">


                    <!-- Your views here -->
                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/fire_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp"
                        tools:srcCompat="@drawable/fire_icon" />

                    <TextView
                        android:id="@+id/streaks_monthly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textColor="#DF1919"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="Hot streaks"
                        android:textColor="#DF1919"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/points_gained"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_border"
                    android:backgroundTint="#EFC27F"
                    android:orientation="vertical">

                    <!-- Your views here -->

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/points_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@drawable/points_icon" />

                    <TextView

                        android:id="@+id/points_monthly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="120"
                        android:textColor="#AA642E"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="Points gained"
                        android:textColor="#AA642E"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/plastic_saved"
                    android:layout_width="0dp"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:background="@drawable/custom_border"
                    android:backgroundTint="#7DC5E6"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/imageView11"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/kilo_icon"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@drawable/kilo_icon" />

                    <TextView

                        android:id="@+id/plastic_monthly"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:textColor="#2196F3"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView11" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="Plastic Donated"
                        android:textColor="#2196F3"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <!-- Your views here -->

                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Your monthly overview:"
                android:textColor="@color/green"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/overview"
                android:text="Check your statistics for this month"

                android:textColor="#838383"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/overview" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <Button
                android:id="@+id/btn_redeem"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green"
                android:drawableLeft="@drawable/baseline_card_giftcard_24"
                android:text="Redeem Gifts"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btn_recycle"
                android:layout_width="333dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/green"
                android:drawableLeft="@drawable/baseline_recycling_24"
                android:text="Record Waste"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/btn_redeem"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>



        <!-- Add your other views here -->

    </LinearLayout>
</LinearLayout>